Update TODO list

--- a/TODO
+++ b/TODO
@@ -2,8 +2,12 @@ In no particular order:
 
 - HTTP status interface and administrative control
   - Either third-party lib or custom-written linkable lib
-- autoconf setup
+- autoconf setup - 10/03/12
 - Configuration file instead of macros
 - Write unit tests
 - Add event-driven request handling implementation
   - either select-based or poll-based will work, but select is preferred
+- Optionally Log to file
+  - Can overload << in GTBCommunication, but this may have unfortunate
+    consequences
+- Client resume
